--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Publish
       uses: softprops/action-gh-release@v1
       with:
-          tag_name: "Release"
+          tag_name: "1.62"
           files: "PinGod.VP*"
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
