--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,7 +2,7 @@ name: .Net 472
 
 on:
   push:
-    branches: [ main, develop ] # should just build the release when pull request is completed
+    branches: [ main ] # should just build the release when pull request is completed
 #  pull_request:
 #    branches: [ main ]
 
@@ -33,7 +33,7 @@ jobs:
     - name: Build
       shell: bash
       run: |
-        tag=$(git describe --tags --abbrev=0)
+        tag=$(git describe --tags --always --abbrev=0)
         release_name="PinGod.VP-$tag-${{ matrix.target }}"
 
         # msbuild
