--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,10 +11,10 @@ jobs:
     name: Release
     strategy:
       matrix:
-        kind: ['windows']
+        kind: ['linux']
         include:
-          - kind: windows
-            os: windows-latest
+          - kind: linux
+            os: ubuntu-latest
             target: win-x86
     runs-on: ${{ matrix.os }}
     steps:
@@ -33,8 +33,8 @@ jobs:
     - name: Build
       shell: bash
       run: |
-        tag=$(git describe --tags --always --abbrev=0)
-        release_name="PinGod.VP-$tag-${{ matrix.target }}"
+        tag=$(git describe --tags --abbrev=0)
+        release_name="PinGod.VP-$tag-win-x86"
 
         # msbuild
         msbuild.exe PinGod.VP.sln -p:Configuration=Release -p:DeployOnBuild=true -p:Platform=x86 -p:OutputPath="./${release_name}/"  
@@ -48,6 +48,6 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
           tag_name: "1.63"
-          files: "PinGod.VP*"
+          files: "PinGod.VP-*"
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
