--- a/.github/workflows/msbuild-x86.yml
+++ b/.github/workflows/msbuild-x86.yml
@@ -2,8 +2,8 @@ name: .Net 472 - x86
 on:
   push:
     branches: [ dev ] # should just build the release when pull request is completed
-    tags:
-      - "dev*"
+    #tags:
+    #  - "dev*"
 jobs:
   release:
     name: Develop
@@ -32,7 +32,7 @@ jobs:
       shell: bash
       run: |
         tag=$(git describe --tags --always --abbrev=0)
-        release_name="PinGod.VP-$tag-win-${{ matrix.target }}"
+        release_name="PinGod.VP-${{ matrix.target }}"
 
         # msbuild
         msbuild.exe PinGod.VP.sln -p:Configuration=Release -p:DeployOnBuild=true -p:Platform=x86 -p:OutputPath="./${release_name}/"  
@@ -47,4 +47,4 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         generateReleaseNotes: true
         tag: ${{ github.ref_name }}
-        artifacts: ${release_name}.zip
+        artifacts: ${{ steps.export.outputs.archive_directory }}/PinGod.VP-${{ matrix.target }}.zip
