--- a/.github/workflows/msbuild-x86.yml
+++ b/.github/workflows/msbuild-x86.yml
@@ -31,14 +31,11 @@ jobs:
     - name: Build
       shell: bash
       run: |
-        tag=$(git describe --tags --always --abbrev=0)
-        release_name="PinGod.VP-${{ matrix.target }}"
-
+        release_name="PinGod.VP-${{github.ref_name}}-${{ matrix.target }}"
         # msbuild
         msbuild.exe PinGod.VP.sln -p:Configuration=Release -p:DeployOnBuild=true -p:Platform=x86 -p:OutputPath="./${release_name}/"  
         7z a -tzip "${release_name}.zip" "D:/a/pingod-controller-com/pingod-controller-com/PinGod.VP/${release_name}/*"
-        7z a -tzip "${release_name}.zip" "D:/a/pingod-controller-com/pingod-controller-com/PinGod.VP.WPF/${release_name}/*"
-        
+        7z a -tzip "${release_name}.zip" "D:/a/pingod-controller-com/pingod-controller-com/PinGod.VP.WPF/${release_name}/*"        
         # Only need this for multiple platform
         # rm -r "$release_name"  
     - name: create release
