--- a/.github/workflows/msbuild-x86.yml
+++ b/.github/workflows/msbuild-x86.yml
@@ -30,6 +30,7 @@ jobs:
  
     - name: Build
       shell: bash
+      id: build
       run: |
         release_name="PinGod.VP-${{github.ref_name}}-${{ matrix.target }}"
         # msbuild
@@ -44,4 +45,4 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         generateReleaseNotes: false       
         tag: ${{ github.ref_name }}
-        artifacts: ${{ steps.export.outputs.archive_directory }}/PinGod.VP-${{github.ref_name}}-${{ matrix.target }}.zip
+        artifacts: ${{ steps.build.outputs.archive_directory }}/PinGod.VP-${{github.ref_name}}-${{ matrix.target }}.zip
